[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tiles/OreProcessing/BaseOreTransformerTile.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Belts/BaseConveyorTile.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Busy"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Pending"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "PowerDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_PowerDown_done"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "PowerUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_PowerUp_done"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 3 )

[node name="BaseOreTransformerTile" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
frame = 8

[node name="AnimationPlayer" parent="." index="1"]
anims/Busy = SubResource( 1 )
anims/Pending = SubResource( 2 )
anims/PowerDown = SubResource( 3 )
anims/PowerUp = SubResource( 4 )

[node name="StorageArea" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StorageArea" index="0"]
shape = SubResource( 5 )

[node name="ProcessTimer" type="Timer" parent="." index="5"]
[connection signal="timeout" from="ProcessTimer" to="." method="_on_ProcessTimer_timeout"]
